--- a/Assignment1/yummy/style.css
+++ b/Assignment1/yummy/style.css
@@ -66,7 +66,7 @@
     margin-top: 30px;
     font-weight: 500;
 }
-.card{
+.item-card{
     margin: 20px 0px;
     height: 50rem;
     border-top-left-radius: 400px !important;
@@ -94,4 +94,16 @@
 
 .item-price{
     font-weight: 600;
+}
+
+.footer{
+    border-radius: 15px;
+    background: radial-gradient(red 40%, orange 80%, yellow);
+    height: 50px;
+    color: white;
+    font-weight: 600;
+}
+
+.footer > p{
+    align-items: center;
 }
