--- a/Assignment1/yummy/style.css
+++ b/Assignment1/yummy/style.css
@@ -72,8 +72,9 @@
     border-top-left-radius: 400px !important;
     border-top-right-radius: 400px !important;
     /* z-index: 0; */
-    /* background-color:   !important; */
-    background: radial-gradient(red 40%, orange 80%, yellow);
+    /* background-color: #ffc107  !important; */
+    background: radial-gradient(#ffc107 50%, yellow);
+    
     
 
 }
@@ -84,6 +85,8 @@
 
 .card-text{
     text-align: center;
+    /* width: 10px; */
+    /* word-spacing: 1px; */
     font-size: 17px;
     /* padding: 200px; */
 }
@@ -98,12 +101,17 @@
 
 .footer{
     border-radius: 15px;
-    background: radial-gradient(red 40%, orange 80%, yellow);
+    background: radial-gradient(#ffc107 50%, yellow);
     height: 50px;
     color: white;
     font-weight: 600;
+    display: flex;
+    align-content: center;
 }
 
 .footer > p{
-    align-items: center;
+    align-self: center;
+    align-content: center;
+    margin-bottom:0 !important;
+    /* height: 50px; */
 }
